test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_file_type.draco
file (MAX-1) a;

proc main() void : a := 1; corp;
