test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_file_as_identifier.draco
int file;
 
proc main() void : a := 1; corp;
